--- a/baitap1.html
+++ b/baitap1.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <p> đây là bài tập 1 </p>
     <h1>bài tập 1</h1>
     <style>
-      
-    h1 {color: rgb(255, 0, 30);}
-  
+        h1 {
+            color: rgb(255, 0, 30);
+        }
     </style>
     <h2>tính năng của git</h2>
+    <p>đây la lần sửa thư 2</p>
 </body>
+
 </html>
